--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bookikinder-front",
+  "name": "bookkinder-front",
   "type": "module",
   "private": true,
   "scripts": {
@@ -16,13 +16,19 @@
     "@nuxt/scripts": "^0.12.1",
     "@nuxt/test-utils": "^3.19.2",
     "@nuxt/ui": "^4.0.1",
+    "@pinia/nuxt": "^0.11.2",
     "@tailwindcss/vite": "^4.1.14",
     "@unhead/vue": "^2.0.19",
     "eslint": "^9.37.0",
     "nuxt": "^4.1.3",
+    "pinia": "^3.0.3",
     "tailwindcss": "^4.1.14",
-    "typescript": "^5.9.3",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@types/node": "^24.9.1",
+    "typescript": "^5.9.3",
+    "vue-tsc": "^3.1.1"
   }
 }
