--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,19 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
+  "compilerOptions": {
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "lib": ["ESNext", "DOM"],
+    "strict": true,
+    "jsx": "preserve",
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "types": ["@types/node", "nuxt"]
+  },
+  
+  "exclude": ["node_modules", ".nuxt", "dist"],
+
   "files": [],
   "references": [
     {
